--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
   "devDependencies": {
     "chai": "^4.1.2",
     "mocha": "^4.0.1",
-    "mock-local-storage": "^1.0.5"
+    "mock-local-storage": "^1.0.5",
+    "superagent": "^3.8.2",
+    "nock": "^9.1.6"
   }
 }
