--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "mocha": "^4.0.1",
     "mock-local-storage": "^1.0.5",
     "superagent": "^3.8.2",
-    "nock": "^9.1.6"
+    "nock": "^9.1.6",
+    "jquery": "^3.2.1",
+    "jsdom": "^11.5.1"
   }
 }
