--- a/package.json
+++ b/package.json
@@ -19,11 +19,13 @@
   "homepage": "https://github.com/hashijun/zendesk-incident-protector#readme",
   "devDependencies": {
     "chai": "^4.1.2",
-    "mocha": "^4.0.1",
-    "mock-local-storage": "^1.0.5",
-    "superagent": "^3.8.2",
-    "nock": "^9.1.6",
     "jquery": "^3.2.1",
-    "jsdom": "^11.5.1"
-  }
+    "jsdom": "^11.5.1",
+    "mocha": "^4.1.0",
+    "mock-local-storage": "^1.0.5",
+    "nock": "^9.1.6",
+    "sinon": "^4.2.1",
+    "superagent": "^3.8.2"
+  },
+  "dependencies": {}
 }
