--- a/package.json
+++ b/package.json
@@ -19,9 +19,12 @@
   "homepage": "https://github.com/hashijun/zendesk-incident-protector#readme",
   "devDependencies": {
     "chai": "^4.1.2",
+    "extend": ">=3.0.2",
     "hoek": "^5.0.3",
     "jquery": "^3.2.1",
     "jsdom": "^12.0.0",
+    "just-extend": ">=4.0.0",
+    "lodash": ">=4.17.11",
     "mocha": "^4.1.0",
     "mock-local-storage": "^1.0.5",
     "nock": "^9.1.6",
